<resources>
    <string name="app_name">SoftwareEstimation</string>
    <string name="software_estimation">Software estimation</string>
    <string name="choose_project_type">Project type:</string>

    <string name="enter_params_title">Enter parameters</string>

    <string name="main_characteristics_title">Main system characteristics</string>

    <string name="project_name">Project name</string>
    <string name="project_description">Project description</string>
    <string name="enter_project_name">Enter project name</string>
    <string name="enter_project_description">Enter project description</string>
    <string name="ready">Ready</string>
    <string name="ei">EI</string>
    <string name="eo">EO</string>
    <string name="eq">EQ</string>
    <string name="ilf">ILF</string>
    <string name="elf">ELF</string>
    <string name="data_exchange">Data exchange:</string>
    <string name="distributed_functions">Distributed functions:</string>
    <string name="capacity">Capacity:</string>
    <string name="heavily_used_configuration">Heavily used configuration:</string>
    <string name="transaction_intensity">Transaction intensity:</string>
    <string name="dialogue_input">Dialogue input:</string>
    <string name="end_user_efficiency">End User Efficiency:</string>
    <string name="live_updates">Live update:</string>
    <string name="complexity_of_data_processing">Complexity of data processing:</string>
    <string name="reuse">Reuse:</string>
    <string name="ease_of_installation">Ease of installation:</string>
    <string name="ease_of_use">Ease of use:</string>
    <string name="prevalence">Prevalence:</string>
    <string name="ease_of_change">Ease of change:</string>
    <string name="zero">0</string>
    <string name="estimated_project">Estimated project</string>
    <string name="estimation_is">Estimation is</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="man_month">man-month</string>
    <string name="androidPercent">Android</string>
    <string name="iosPercent">iOS</string>
    <string name="frontendPercent">frontend</string>
    <string name="analyticPercent">analytics</string>
    <string name="backendPercent">backend</string>
    <string name="managePercent">manage</string>
    <string name="testPercent">test</string>
    <string name="search_project">Search projects...</string>
    <string name="search_employees">Search employees...</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="add_spec">Add specialization</string>
    <string name="add_busy">Add busy</string>
    <string name="intern_level">Intern</string>
    <string name="junior_level">Junior</string>
    <string name="middle_level">Middle</string>
    <string name="senior_level">Senior</string>
    <string name="lead_level">Lead</string>
    <string name="specs">Specialization</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="projects_list_screen_description">Project list screen description</string>
    <string name="projects_list_screen_title">Projects list</string>
    <string name="add_project_screen_description">Add project screen</string>
    <string name="add_project_screen_title">Add project</string>
    <string name="employees_list_screen_title">Employees list</string>
    <string name="employees_list_screen_description">Employees</string>
    <string name="fragment_estimated_project_screen">Estimated project</string>
    <string name="fragment_add_employee_screen">Add employee</string>
    <string name="spec">Specializations</string>
    <string name="busy">Busies</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="level_spec">Level</string>
    <string name="from_date">from</string>
    <string name="to_date">to</string>
    <string name="generate_time_diagram">Generate time diagram again</string>
    <string name="send_time_diagram">Send time diagram</string>
    <string name="time_diagram_generated">Time diagram is generated</string>
    <string-array name="project_types">
        <item>Mobile app</item>
        <item>Web app</item>
    </string-array>
    <string-array name="numeric_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="levels_spinner">
        <item>Intern</item>
        <item>Junior</item>
        <item>Middle</item>
        <item>Senior</item>
        <item>Lead</item>
    </string-array>
    <string-array name="specs_spinner">
        <item>Analytic</item>
        <item>Android Developer</item>
        <item>Backend Developer</item>
        <item>Ios Developer</item>
        <item>Project Manager</item>
        <item>Tester</item>
        <item>Web Developer</item>
    </string-array>
</resources>