<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/projects_list_nav"
        android:icon="@drawable/ic_list_black"
        android:contentDescription="@string/projects_list_screen_description"
        android:title="@string/projects_list_screen_title" />
    <item
        android:id="@+id/add_project_nav"
        android:icon="@drawable/ic_plus_black"
        android:contentDescription="@string/add_project_screen_description"
        android:title="@string/add_project_screen_title" />
    <item
        android:id="@+id/employees_list_nav"
        android:icon="@drawable/ic_groups_black"
        android:contentDescription="@string/employees_list_screen_description"
        android:title="@string/employees_list_screen_title" />
</menu>
