<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_employee_feature.AddEmployeeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_employee__surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_black_stroke"
            android:ellipsize="end"
            android:hint="@string/enter_surname"
            android:maxLines="1"
            android:padding="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_employee__name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_black_stroke"
            android:ellipsize="end"
            android:hint="@string/enter_name"
            android:maxLines="1"
            android:padding="16dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_employee__add_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_lil_purple"
            android:padding="16dp"
            android:text="@string/add_spec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_employee__spec_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_employee__add_busy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_lil_purple"
            android:padding="16dp"
            android:text="@string/add_busy" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_employee__date_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_employee__ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_lil_purple"
            android:padding="16dp"
            android:text="@string/ready" />

    </LinearLayout>

</ScrollView>