<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fill_project_form_feature.FillFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/choose_project_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/choose_project_type_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/choose_project_type_tv"
            app:layout_constraintTop_toTopOf="@+id/choose_project_type_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ready_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/background_purple_rounded"
            android:text="@string/ready"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_characteristics_rv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/project_title_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_project_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_title_tv"
            tools:text="24-ghfn24pwieu0t3h2inofewig0h42t8hgeiqonng24h08giqepnnqgh04" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/project_description_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_project_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_description_tv"
            tools:text="24-ghfn24pwieu0t3h2inofewig0h42t8hgeiqonng24h08giqepnnqgh04" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/software_estimation"
            android:textAppearance="@style/UsualText.Bold.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/project_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/project_name"
            android:textAppearance="@style/UsualText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_project_type_tv"
            style="@style/UsualText.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/choose_project_type"
            app:layout_constraintEnd_toStartOf="@+id/choose_project_type_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_description_et" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/project_description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/project_description"
            android:textAppearance="@style/UsualText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_title_et" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enter_params_block_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/enter_params_title"
            android:textAppearance="@style/UsualText.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_project_type_spinner" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_characteristics_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/main_characteristics_title"
            android:textAppearance="@style/UsualText.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_params_rv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/enter_params_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_params_block_title_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="16dp"
            android:id="@+id/main_characteristics_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_characteristics_title_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


