<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".estimated_project_feature.EstimatedProjectFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/estimated_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/estimated_project"
        android:textAppearance="@style/UsualText.Bold.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/estimated_project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/UsualText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimated_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/estimated_project_month_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/estimation_is"
        android:textAppearance="@style/UsualText.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimated_project_title" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/estimated_project_month_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textAppearance="@style/UsualText.Bold.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimated_project_month_title" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimated_project_month_value" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generateTimeDiagramButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_time_diagram"
        android:padding="8dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieChart"
        android:background="@drawable/background_lil_purple" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendTimeDiagramButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_time_diagram"
        android:padding="8dp"
        android:layout_margin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateTimeDiagramButton"
        android:background="@drawable/background_lil_purple" />


</androidx.constraintlayout.widget.ConstraintLayout>